<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Viciniti</string>
    <string name="build_version">0.1.490</string>
    <string name="placeholder_fragment_title">Available devices</string>
    <string name="levels_fragment_title">Security levels</string>
    <string name="details_fragment_title">Device details</string>
    <string name="title_section1">All devices</string>
    <string name="title_section2">With app installed</string>
    <string name="title_section3">Without app</string>
    <string name="action_add_level">Add new zone</string>
    <string name="action_list_level">Browse zones</string>
    <string name="action_scan_controller">Toggle scan</string>
    <string name="action_device_status">Device status</string>
    <string name="action_log_file">Open log file</string>
    <string name="devices_not_found">Devices not found</string>
    <string name="back">Back</string>
    <string name="add_text">Add new security zone:</string>
    <string name="empty_fields">Fill in empty fields</string>
    <string name="zone_name_hint">Zone name</string>
    <string name="zone_level_hint">Security radius (in dBm)</string>
    <string name="gps_text">GPS:</string>
    <string name="accelerometer_text">Accelerometer:</string>
    <string name="choose_photo_text">Take photo</string>
    <string name="closeButtonText">Close plot</string>
    <string name="logged_in_text">You are logged in</string>
    <string name="set_to_text">Set to</string>
    <string name="connected_to_text">Connected to:</string>
    <string name="share_logfile_text">Share Log</string>
    <string name="hint_text">Note: The lower the graph - the nearer supervised device is</string>

</resources>